2009-07-19  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: New subsection "status" for all read-only values.
	* config.c: New subsection "action" for simple camera actions.

2009-07-15  Axel Waggershauser  <awagger@web.de>

	* config.c: some unnecessary debuglines removed.
	* config.c: Decode EOS battery charge value.
	* config.c,library.c: support for 'online-updates' of capturetarget for EOS

2009-07-10  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: Generic PTP wrapper function (no data, no output)
	  to avoid coding all generic functions as seperate functions.
	  Converted all convertable functions to macros.

2009-07-09  Axel Waggershauser  <awagger@web.de>

	* ptp.c: Some sprintf format adjustments.
	* ptp.h: EOS_RemoteRelease doc comments.
	* config.c: More Canon ISO and FStop values for the Canon 5D Mark II.
	* ptp-pack.c,library.c: More EOS debugging output.
	* config.c: Added AEB and DriveMode configuration.
	* ptp.c,ptp.h: Added ptp_canon_eos_requestdevicepropvalue()
	* config.c: request some string types, handle owner, artist,
	  copyright, lensname, serialnr, shuttercount, availableshots
	* ptp.c: decode EOS strings better
	* ptp-pack.c: dpd.GetSet adjustments.
	* ptp-pack.c,config.c,ptp.c: Implemented EOS ImageSize and ImageFormat handling.

2009-05-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,library.c.usb.c:: Unify and abstract ptp object handling.
	  Add "on demand" loading throughout library.c.

	  (Larger rewrite ... might still be a bit buggy.)

2009-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptp-pack.c: make nikon check event return a
	  generic PTPContainer, make canon check event also return
	  a generic PTPContainer.

	* ptp.c,ptp.h: Added 2 PTP event queue, generic events and Canon EOS.

	* library.c: Rewrote wait_for_event to use event queues etc.

	* library.c: Hooked up the first try at the trigger capture method,
	  currently just PTP generic, others to follow.
